Correction bugs affichage (notre histoire + sous-menu z-index)

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ header {
     width: max-content;
     /* Other */
     border: 1px solid black;
+    z-index: 1000;
 }
 .sous-nav li {
     padding: 10px;
