--- a/style_responsive.css
+++ b/style_responsive.css
@@ -91,7 +91,7 @@
         padding: 2% 0;
         border-radius: 25px;
     }
-    .menu li:first-child>a{
+    .menu-button{
         display: flex;
         padding: 2.4% 0;
         align-items: center;
